generate-train-algo-enemy/errorFile122-02-2020-01-59-18-1582354758399--514870194.txt
  File "/home/yuntian/Dropbox/Terminal/yuntian/C1GamesStarterKit/generate-train-algo/algo_strategy.py", line 152
    def build_to_defense(self, deploy_stack):
                                            ^
IndentationError: unindent does not match any outer indentation level
